--- a/frontend-web/src/App.css
+++ b/frontend-web/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps:wght@400;700&family=Open+Sans:wght@400;500;600;700&display=swap');
 
 * {
     box-sizing: border-box;
