--- a/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
@@ -1,10 +1,10 @@
 .event--card--container {
     background-color: #ADD3FA;
-    width: auto;
     font-size: 14px;
+    min-width: 230px;
+    max-width: 230px;
     padding: 20px 20px;
     border-radius: 20px;
-    max-width: 230px;
     height: 140px;
     display: flex;
     align-items: center;
