--- a/frontend-web/src/pages/EventsLibrary/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/styles.css
@@ -56,27 +56,22 @@
     justify-content: center;
     gap: 15px;
     height: auto;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .events--container {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
+    display: grid;
+    grid-gap: 12px;
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
     .join--event--container {
         font-size: 12px;
     }
 
     .events--container {
-        display: grid;
-        grid-template-columns: repeat(2, 50%);
-        grid-column-gap: 10px;
+        max-width: 520px;
     }
 }
 
@@ -90,8 +85,6 @@
     }
 
     .events--container {
-        display: grid;
-        grid-template-columns: repeat(3, 32%);
-        grid-column-gap: 15px;
+        max-width: 760px;
     }
 }
