--- a/frontend-web/src/components/Navbar/styles.css
+++ b/frontend-web/src/components/Navbar/styles.css
@@ -23,7 +23,7 @@
     width: 100%;
     display: flex;
     align-items: flex-end;
-    justify-content: end;
+    justify-content: flex-end;
     flex-direction: column;
 }
 
