--- a/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
@@ -2,7 +2,6 @@
     background-color: #ADD3FA;
     cursor: pointer;
     font-size: 14px;
-    min-width: 230px;
     max-width: 230px;
     padding: 20px 20px;
     border-radius: 20px;
@@ -28,4 +27,10 @@
     width: 100%;
     text-align: center;
     font-size: 20px;
+}
+
+@media(min-width: 576px) {
+    .event--card--container {
+        min-width: 230px;
+    }
 }
