--- a/frontend-web/src/components/Navbar/styles.css
+++ b/frontend-web/src/components/Navbar/styles.css
@@ -6,7 +6,7 @@
     padding: 7px 10px;
     border-radius: 10px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     flex-direction: column;
     gap: 5px;
