--- a/frontend-web/src/pages/EventsLibrary/AddEventPopup/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/AddEventPopup/styles.css
@@ -24,6 +24,10 @@
     margin-top: 5px;
 }
 
+.join--event--main button:hover {
+    background-color: #85bde8;
+}
+
 .join--card--container {
     max-width: 100%;
     background-color: #92C7EF;
