--- a/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/EventCard/styles.css
@@ -1,4 +1,5 @@
 .event--card--container {
+    position: relative;
     background-color: #ADD3FA;
     cursor: pointer;
     font-size: 14px;
@@ -21,6 +22,23 @@
     border: #FFF solid 1px;
     margin: 3px 0;
     width: 100%;
+}
+
+.delete-event {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    background-color: #92C7EF;
+    padding: 5px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.event--card--container svg {
+    height: 12px;
+    width: 12px;
 }
 
 .event--card--header {
