--- a/frontend-web/src/pages/Landing/styles.css
+++ b/frontend-web/src/pages/Landing/styles.css
@@ -1,131 +1,119 @@
-.landing--wrapper {
-    height: 100vh;
+.landing-container {
+    display: flex;
+    flex-direction: column;
 }
 
-.landing--content {
-    min-height: 85%;
-    width: 100%;
+.landing-card-container {
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
+    flex: 1;
+    padding: 30px 20px;
 }
 
-.landing--card {
+.landing-card {
     background-color: #92C7EF;
+    width: 100%;
     border-radius: 20px;
-    height: 100%;
-    width: 290px;
-    padding: 20px;
+    padding: 26px 40px 0 40px;
     font-size: 15px;
-    max-width: 820px;
+    max-width: 380px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 42px;
 }
 
-.landing--card hr {
-    width: 100%;
-    border: #FFF solid 1px;
+.landing-card-header-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
 }
 
-.landing--card--content h1 {
-    font-size: 40px;
+.landing-card-header-container img {
+    width: 238px;
+}
+
+.landing-card-header {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.landing-card-header h1 {
+    font-size: 56px;
+    font-weight: 400;
+    text-align: center;
     font-family: "Oleo Script Swash Caps";
 }
 
-.landing--content--images {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.landing-card-header p {
+    font-size: 14px;
+    letter-spacing: 2px;
 }
 
-.landing--card--content p {
-    margin-top: 5px;
-    margin-bottom: 20px;
-}
-
-.landing--content--images svg {
-    height: 40px;
-    width: 40px;
-}
-
-.landing--card--form {
+.landing-card-cta-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 12px;
-}
-
-.landing--card--form h1 {
-    font-size: 26px;
-}
-
-.landing--card--form input {
-    color: #FFF;
-    font-size: 18px;
-    background-color: #ADD3FA;
-    border-radius: 5px;
-    padding: 5px;
-    border: none;
-    outline: none;
-    max-width: 225px;
-}
-
-.landing--card--form input::placeholder {
-    color: rgba(255, 255, 255, 0.85)
-}
-
-.landing--card--form button {
-    color: #FFF;
-    font-size: 18px;
-    background-color: #ADD3FA;
-    border-radius: 15px;
-    padding: 5px 20px;
-    border: none;
-    max-width: 135px;
-    cursor: pointer;
+    gap: 42px;
 }
 
 @media(min-width: 768px) {
-    .landing--card {
-        width: 340px;
-        padding: 25px;
+    .landing-card {
+        max-width: 460px;
+    }
+
+    .landing-card-header {
+        max-width: 360px;
     }
 }
 
 @media(min-width: 992px) {
-    .landing--card {
+    .landing-card {
+        max-width: unset;
+        width: unset;
+        padding: 44px 100px 0 100px;
+        gap: 5px;
+    }
+
+    .landing-card-header-container {
         flex-direction: row;
-        width: 700px;
-        gap: 25px;
-        padding: 40px 62px;
+        align-items: unset;
+        gap: 76px;
     }
 
-    .landing--card hr {
-        border-bottom: none;
-        border-top: none;
-        border-right: none;
-        border-left: 2px solid #FFF;
-        width: 3px;
-        height: 285px;
+    .landing-card-header-container img {
+        width: 345px;
+        height: auto;
+        transform: translateY(18px);
     }
 
-    .landing--card--content h1 {
-        text-align: center;
-        font-size: 70px;
-        font-weight: 400;
+    .landing-card-header {
+        max-width: 368px;
     }
 
-    .landing--card--content p {
-        font-size: 16px;
+    .landing-card-header h1 {
+        text-align: left;
+        font-size: 5.3rem;
     }
 
-    .landing--card--form {
-        gap: 22px;
+    .landing-card-header p {
+        font-size: 18px;
+    }
+
+    .landing-card-cta-container {
+        flex-direction: row-reverse;
+        align-self: flex-start;
+        gap: 170px;
+    }
+
+    .management-image {
+        width: 278px;
     }
 }
