--- a/frontend-web/src/components/DualButton/styles.css
+++ b/frontend-web/src/components/DualButton/styles.css
@@ -15,31 +15,35 @@
 }
 
 .dual-button-text-area {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 6px 10px 8px 16px;
     font-size: 14px;
     font-weight: 600;
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 1px;
     color: #FFF;
+    height: 33px;
 }
 
 .dual-button-icon-area {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #FFF;
     padding: 4px 10px 4px 6px;
     border-radius: 0 16px 16px 0;
+    height: 33px;
 }
 
 .dual-button-icon-area img {
-    width: 22px;
-    height: auto;
+    width: auto;
+    height: 22px;
 }
 
 @media(min-width: 992px) {
-    .dual-button-text-area {
-        padding: 8px 10px 8px 16px;
-    }
-
-    .dual-button-icon-area {
-        padding: 6px 10px 4px 6px;
+    .dual-button-text-area, .dual-button-icon-area {
+        height: 36px;
     }
 }
