--- a/frontend-web/src/components/Button/styles.css
+++ b/frontend-web/src/components/Button/styles.css
@@ -4,7 +4,7 @@
     justify-content: center;
     min-width: 100px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: bold;
     padding: 6px 16px;
     background-color: #6C63FF;
     border-radius: 15px;
@@ -19,7 +19,6 @@
 
 @media(min-width: 992px) {
     .button {
-        font-size: 18px;
         padding: 8px 20px;
         border-radius: 18px;
     }
