--- a/frontend-web/src/components/DualButton/styles.css
+++ b/frontend-web/src/components/DualButton/styles.css
@@ -20,7 +20,7 @@
     justify-content: center;
     padding: 6px 10px 8px 16px;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: bold;
     font-family: 'Open Sans', sans-serif;
     letter-spacing: 1px;
     color: #FFF;
