--- a/frontend-web/src/pages/EventsLibrary/components/RemoveEventPopUp/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/components/RemoveEventPopUp/styles.css
@@ -15,56 +15,74 @@
     max-width: 100%;
     background-color: #92C7EF;
     border-radius: 20px;
-    padding: 30px 20px 32px 20px;
+    padding: 35px 32px 40px 32px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    gap: 20px;
-    border: rgba(255, 255, 255, 0.5) solid 1px;
 }
 
 .remove-card-container h1 {
-    font-size: 20px;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    margin-top: 26px;
+    margin-bottom: 18px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 90%;
+}
+
+.remove-card-container img {
+    height: 145px;
+}
+
+.remove-event-area {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.remove-event-area span {
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    margin-bottom: 30px;
+}
+
+.remove-event-area img {
+    width: 36px;
+    height: 36px;
 }
 
 .remove-event-buttons {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
+    gap: 18px;
 }
 
-.remove-event-buttons button {
-    width: 85px;
-    padding: 6px 10px;
-    border: none;
-    border-radius: 15px;
-    background-color: #ADD3FA;
-    color: #FFF;
-    font: 13px 'Open Sans';
-    cursor: pointer;
-}
+@media(min-width: 992px) {
+    .remove-card-container {
+        flex-direction: row;
+        padding: 38px;
+        gap: 50px;
+    }
 
-.remove-event-buttons button:hover {
-    background-color: #85bde8;
-}
+    .remove-card-container h1 {
+        margin: unset;
+        font-size: 20px;
+    }
 
-.loading--add {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-}
+    .remove-event-area {
+        height: 100%;
+        justify-content: space-between;
+    }
 
-.loading--add h1 {
-    font-family: 'Oleo Script Swash Caps', 'Open Sans', sans-serif;
-    font-size: 42px;
-}
-
-.loading--add img {
-    width: 40px;
-    height: 40px;
+    .remove-event-area span {
+        margin: unset;
+        font-size: 18px;
+    }
 }
