--- a/frontend-web/src/pages/EventsLibrary/components/EventCard/styles.css
+++ b/frontend-web/src/pages/EventsLibrary/components/EventCard/styles.css
@@ -13,6 +13,7 @@
     gap: 8px;
     border: solid 5px #92C7EF;
     max-height: 112px;
+    max-width: 150px;
 }
 
 .event-card-container h1 {
@@ -66,6 +67,8 @@
 @media(min-width: 768px) {
     .event-card-container {
         padding: 18px 14px;
+        max-width: 190px;
+        max-height: 135px;
     }
 
     .event-card-container h1 {
@@ -74,7 +77,6 @@
 
     .event-card-container p { 
         font-size: 12px;
-        --max-lines: 2;
     }
 }
 
@@ -83,17 +85,19 @@
         max-height: 150px;
         border-radius: 16px;
         border: solid 6px #92C7EF;
+        max-width: 220px;
     }
 
     .event-card-container h1 {
         font-size: 16px;
         font-weight: 600;
+        letter-spacing: 0.6px;
     }
 
     .event-card-container p { 
         font-size: 14px;
-        font-weight: 600;
-        letter-spacing: 0px;
+        font-weight: 500;
+        letter-spacing: 1px;
     }
 
     .delete-event {
