--- a/frontend-web/src/pages/Event/styles.css
+++ b/frontend-web/src/pages/Event/styles.css
@@ -1,56 +1,191 @@
-.event--container {
-    z-index: 2;
+.event-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
     height: 100vh;
 }
 
-.event--info--container {
-    width: 100%;
-    height: 100%;
+.event-header {
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    text-align: center;
-    padding: 0px 10px;
-}
-
-.event--info--container h1 {
-    font-size: 18px;
-}
-
-.event--tab--card {
     width: 100%;
-    max-width: 1000px;
-    height: 80%;
-    background-color: #92C7EF;
-    border-radius: 20px;
-    padding: 30px 20px;
+    gap: 8px;
+    padding: 0 68px 0 22px;
+    margin: 28px 0 26px 0;
+}
+
+.event-header h1 {
+    font-family: 'Oleo Script Swash Caps';
+    font-size: 26px;
+    font-weight: 500;
+}
+
+.event-toogle-menu {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    background-color: #6C63FF;
     display: flex;
     align-items: center;
     justify-content: center;
+    top: 22px;
+    right: 18px;
+    cursor: pointer;
 }
 
-@media (min-width: 576px) {
-    .event--info--container {
-        padding: 0px 20px;
-    }
+.event-toogle-menu img {
+    height: 27px;
+    width: 27px;
+}
 
-    .event--info--container h1 {
-        font-size: 20px;
+.event-table-slider {
+    overflow: auto;
+    display: flex;
+    flex: 1;
+}
+
+.event-table {
+    display: flex;
+    border-radius: 20px;
+    overflow: auto;
+    padding: 0 24px 10px 24px;
+    background-color: #92C7EF;
+    margin: 0 22px 22px 22px;
+    flex-direction: column;
+    flex: 1;
+    min-width: 810px;
+    max-width: 810px;
+}
+
+.table-header:nth-child(1),
+.table-header:nth-child(2),
+.event-table td:nth-child(1),
+.event-table td:nth-child(2) {
+    min-width: 180px;
+    max-width: 180px;
+}
+
+.table-header:nth-child(3),
+.event-table td:nth-child(3) {
+    min-width: 155px;
+    max-width: 155px;
+}
+
+.table-header:nth-child(4),
+.event-table td:nth-child(4) {
+    min-width: 105px;
+    max-width: 105px;
+    text-align: center;
+}
+
+.table-header:nth-child(5),
+.event-table td:nth-child(5) {
+    min-width: 65px;
+    max-width: 65px;
+    text-align: center;
+}
+
+.event-table tr {
+    display: flex;
+    gap: 24px;
+    text-align: left;
+    cursor: pointer;
+}
+
+.event-table tr:hover {
+    background-color: #87c1ed;
+}
+
+.event-table th,
+.event-table td {
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    overflow: hidden;
+}
+
+.event-table th {
+    font-weight: 500;
+    padding: 16px 0 8px 0;
+}
+
+.event-table td {
+    font-weight: 400;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 12px 0;
+}
+
+.event-table thead {
+    position: sticky;
+    top: 0;
+    background-color: #92C7EF;
+}
+
+.event-table hr {
+    height: 0.5px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    margin-bottom: 4px;
+}
+
+.event-role-container {
+    margin: 4px 0 24px 0;
+    padding: 0 22px;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+    font-weight: 500;
+}
+
+.role-info {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-bottom: 10px;
+}
+
+@media(min-width: 852px) {
+    .event-table-slider {
+        justify-content: center;
     }
 }
 
-@media (min-width: 992px) {
-    .event--info--container {
-        padding: 0px 30px;
+@media(min-width: 992px) {
+    .event-container {
+        margin-left: 18%;
+        align-items: center;
     }
 
-    .event--info--container h1 {
-        font-size: 22px;
+    .event-header {
+        justify-content: center;
+    }
+
+    .event-toogle-menu {
+        display: none;
+    }
+
+    .event-table-slider,
+    .event-table {
+        width: 100%;
+    }
+
+    .event-table {
+        max-width: unset;
+        margin: 0 32px 22px 32px;
+    }
+
+    .table-header:nth-child(1),
+    .table-header:nth-child(2),
+    .event-table td:nth-child(1),
+    .event-table td:nth-child(2) {
+        flex: 1;
+        max-width: unset;
+    }
+
+    .event-role-container {
+        padding: 0 32px;
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
     }
 }
