--- a/frontend-web/src/pages/Event/styles.css
+++ b/frontend-web/src/pages/Event/styles.css
@@ -52,8 +52,8 @@
     margin: 0 22px 22px 22px;
     flex-direction: column;
     flex: 1;
-    min-width: 810px;
-    max-width: 810px;
+    min-width: 825px;
+    max-width: 825px;
 }
 
 .table-header:nth-child(1),
@@ -95,16 +95,16 @@
     background-color: #87c1ed;
 }
 
-.event-table th,
+.table-header,
 .event-table td {
     font-size: 18px;
     letter-spacing: 0.5px;
     overflow: hidden;
 }
 
-.event-table th {
+.table-header {
     font-weight: 500;
-    padding: 16px 0 8px 0;
+    padding-top: 16px;
 }
 
 .event-table td {
@@ -125,7 +125,7 @@
     height: 0.5px;
     background-color: rgba(255, 255, 255, 0.5);
     border: none;
-    margin-bottom: 4px;
+    margin-top: 8px;
 }
 
 .event-role-container {
